--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>XTE ID | X-Tech Engineering Laboratory by Defandryan</title>
+    <title>XTE ID</title>
     <meta name="description" content="XTE ID (X-Tech Engineering) adalah laboratorium riset teknologi oleh Defandryan. Fokus pada AI Engineering, Fullstack Development, dan Sistem Digital Sperada UPT SMPN 18 Gresik.">
     <meta name="keywords" content="XTE ID, X-Tech Engineering, Defandryan, Sperada Digital, AI Engineer Indonesia, Fullstack Developer Gresik, UPT SMPN 18 Gresik, Lab Teknologi SMP">
     <meta name="author" content="Defandryan">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://xte.web.id">
-    
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://xte.web.id/">
-    <meta property="og:title" content="XTE ID | X-Tech Engineering Laboratory">
+    <meta property="og:url" content="https://www.xte.web.id/">
+    <meta property="og:title" content="XTE ID">
     <meta property="og:description" content="Eksplorasi teknologi masa depan bersama XTE ID oleh Defandryan. Arsitektur sistem digital dan riset AI.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=1200&q=80">
 
-    <!-- JSON-LD Structured Data for Google Indexing -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "XTE ID",
       "alternateName": "X-Tech Engineering Laboratory",
-      "url": "https://xte.web.id",
+      "url": "https://www.xte.web.id",
       "image": "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=1200&q=80",
       "description": "XTE ID adalah laboratorium riset teknologi oleh Defandryan yang berfokus pada AI Engineering dan Fullstack Development.",
       "author": {
